--- a/index.html
+++ b/index.html
@@ -184,6 +184,6 @@
         </div>
     </footer>
     
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
