cambios en html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 
                 <div class="personal__text personal__item">
                     <p>Hola, me agrada que estes leyendo sobre mí.</p>
-                    <p>Para comenzar, soy desarroladora front-end, con 2 años de experiencia y algo más. Me encargo de la parte visual y de la interacción que tiene el usuario hacia cualquier dispositivo web, voy constantemente innovando para mejorar mis habilidades tanto en codigo como nuevas tecnologías</p> <br>
+                    <p>Para comenzar, soy desarroladora front-end, con 2 años de experiencia y algo más. Me encargo de la parte visual y de la interacción que tiene el usuario hacia cualquier dispositivo web, voy constantemente innovando para mejorar mis habilidades tanto en codigo como nuevas tecnologías</p>
 
                     <p>Por otra parte, tengo nociones de UX, he realizado proyectos en base a ese tema, logrando asi buenos resultados y usuarios contentos al navegar en el sitio web. Me gusta ir mejorando mis habilidades e optimizando mis recursos, con el fin de sea mas rapida e eficiente los proyectos.</p>
                 </div>
@@ -80,7 +80,6 @@
                         <p>Es una empresa donde brinda servicios  de impresiones y paneles, entre otras anuncios publicitarios. En este proyecto se uso AJAX, para el manejo asíncrono de las imágenes y que vean una galeria amigable en la parte de servicios (:</p>
                     </a>
                 </div>
-
 
                 <div class="poject_item">
                     <a href="http://sile.com.pe/">
@@ -114,7 +113,6 @@
                     </a>
                 </div>
 
-
                 <div class="poject_item">
                     <a href="http://llantilandia.com.pe/">
                         <h3>Project - Llantilandia</h3>
@@ -123,7 +121,36 @@
                     </a>
                 </div>
 
+                <div class="poject_item">
+                    <a href="http://www.depsa.com.pe/es/">
+                        <h3>Project - Depsa</h3>
+                    </a>
+                </div>
 
+            </div>
+
+            <div class="project__landings">
+                <h5>Landings Page's</h5>
+
+                <div class="project__resize">
+                    <div class="poject_item">
+                        <a href="http://websites.confiedev.com/lp/NT077-CUL-ES/">
+                            <h3>Landing Page 1</h3>
+                        </a>
+                    </div>
+
+                    <div class="poject_item">
+                        <a href="http://websites.confiedev.com/lps/NT084-LP/">
+                            <h3>Landing Page 2</h3>
+                        </a>
+                    </div>
+
+                    <div class="poject_item">
+                        <a href="http://websites.confiedev.com/lps/NT091-LP/">
+                            <h3>Landing Page 3</h3>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -152,8 +179,8 @@
                 <p>Adobe xD</p>
                 <p>Photoshop / Illustrador(para cortes, entre otras cosas)</p>
                 
-                <!--<strong>Librerías</strong>
-                <p>Plugins: bxslider, carrusel, gallery, entre otros.</p>-->
+                <!--<strong>Librerías</strong>-->
+                <p>Plugins: bxslider, carrusel, gallery, entre otros.</p>
 
             </div>
         </div>
