canbios en project

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 
                 <div class="personal__text personal__item">
                     <p>Hola, me agrada que estes leyendo sobre mí.</p>
-                    <p>Para comenzar, soy desarroladora front-end, con 2 años de experiencia y algo más. Me encargo de la parte visual y de la interacción que tiene el usuario hacia cualquier dispositivo web, voy constantemente innovando para mejorar mis habilidades tanto en codigo como nuevas tecnologías</p>
+                    <p>Soy desarroladora front-end, con 2 años de experiencia y algo más. Me encargo de la parte visual y de la interacción que tiene el usuario hacia cualquier dispositivo web, voy constantemente innovando para mejorar mis habilidades tanto en codigo como nuevas tecnologías</p>
 
                     <p>Por otra parte, tengo nociones de UX, he realizado proyectos en base a ese tema, logrando asi buenos resultados y usuarios contentos al navegar en el sitio web. Me gusta ir mejorando mis habilidades e optimizando mis recursos, con el fin de sea mas rapida e eficiente los proyectos.</p>
                 </div>
@@ -127,6 +127,17 @@
                     </a>
                 </div>
 
+                <div class="poject_item">
+                    <a href="https://www.corsusa.com/">
+                        <h3>Project - Corsusa</h3>
+                    </a>
+                </div>
+
+                <div class="poject_item">
+                    <a href="http://www.energigas.com/">
+                        <h3>Project - Energigas</h3>
+                    </a>
+                </div>
             </div>
 
             <div class="project__landings">
@@ -174,10 +185,15 @@
                 <p>CSS3/SASS/SYTLUS</p>
                 <p>HTML5/PUG(JADE)</p>
                 <p>Javascript / Jquery</p>
-                <p>Pre-procesadores(PREPOS)</p>
+                <p>Boostrap 4</p>
+                <p>Zeplin</p>
+                <p>Pre-procesadores Prepos</p>
+                <p>React(conocimientos básicos, como JSX, entre otros)</p>
+                <p>Sprites</p>
+                <p>SVG</p>º
                 <p>GULP</p>
-                <p>Adobe xD</p>
-                <p>Photoshop / Illustrador(para cortes, entre otras cosas)</p>
+                <p>Manejo de Adobe xD</p>
+                <p>Manejo de uso de Adobe Photoshop / Illustrador(para cortes, entre otras cosas)</p>
                 
                 <!--<strong>Librerías</strong>-->
                 <p>Plugins: bxslider, carrusel, gallery, entre otros.</p>
