--- a/index.html
+++ b/index.html
@@ -190,12 +190,11 @@
                 <p>Pre-procesadores Prepos</p>
                 <p>React(conocimientos básicos, como JSX, entre otros)</p>
                 <p>Sprites</p>
-                <p>SVG</p>º
+                <p>SVG</p>
                 <p>GULP</p>
                 <p>Manejo de Adobe xD</p>
                 <p>Manejo de uso de Adobe Photoshop / Illustrador(para cortes, entre otras cosas)</p>
                 
-                <!--<strong>Librerías</strong>-->
                 <p>Plugins: bxslider, carrusel, gallery, entre otros.</p>
 
             </div>
