--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
                 <p>HTML5/PUG(JADE)</p>
                 <p>Javascript / Jquery</p>
                 <p>Boostrap 4</p>
+                <p>Wordpress</p>
+                <p>PHP, mysql</p>
+                <p>SQL Server 2008</p>
                 <p>Zeplin</p>
                 <p>Pre-procesadores Prepos</p>
                 <p>React(conocimientos básicos, como JSX, entre otros)</p>
