--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
 </head>
 
-<body>
+<body style="display: none;">
     <main>
         <header class="header">
             <div class="container">
